# pid

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yml
.github/workflows/: build-push.yml
backend/: pid_api.py  pid_gtfs_sync.py  pid_trip_updates.py  pid_vehicle_descriptors.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_vehicle_cache_expiry.py  0003_drop_vehicle_cache_columns.py  0004_trip_runs_by_trip.py  0005_trip_runs_stop_ids.py  0006_trip_run_info_operator_id.py  0007_trip_runs_date_range.py
backend/pid/: db.py  golemio.py  trip_updates.py  vehicle_descriptors.py
backend/pid/api/: deps.py  main.py
backend/pid/models/: __init__.py  agency.py  calendar.py  enums.py  feed_info.py  realtime.py  route.py  shapes.py  stop_times.py  stops.py  transfers.py  trip.py
backend/pid/proto/: gtfs_realtime_OVapi_pb2.py
backend/pid/sync/: __init__.py
backend/proto/: gtfs-realtime-OVapi.proto  gtfs-realtime.proto
backend/tests/: conftest.py  gtfs_fixture.py  test_migrations.py  test_sync.py  test_trip_updates.py  test_vehicle_descriptors.py
docker/: Caddyfile  cron-entrypoint.sh  gtfs-crontab  postgres-init.sh  proxy.Dockerfile
frontend/: index.html
