[project]
name = "pid"
version = "0.1.0"
description = "pid.brq.pecka.me"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.120.0",
    "geoalchemy2>=0.19.0",
    "protobuf>=7.34.1",
    "psycopg[binary]>=3.3.3",
    "requests>=2.33.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-postgresql>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
